# Chevron

./: README.md  pyproject.toml
configs/: example_config.yml  example_field_coords.json
configs/templates/: README.md
src/chevron/: __init__.py  cli.py  ingest.py
src/chevron/calib/: homography.py  manual_click.py
src/chevron/detect/: __init__.py  pipeline.py
src/chevron/render/: blend.py  pipeline.py  warp.py  writer.py
src/chevron/segment/: detector.py  ocr_clock.py
src/chevron/split/: layout.py  tools.py
src/chevron/ui/: __init__.py  capture_area_selector.py  verify_app.py  verify_gui.py
src/chevron/utils/: config.py  ffmpeg.py  hashing.py  io.py
tests/: test_blend_masks.py  test_cli.py  test_detect_pipeline.py  test_ffmpeg_utils.py  test_homography.py  test_ingest.py  test_render_pipeline.py  test_segment_state_machine.py  test_verify_app.py  test_verify_gui.py
